# gagaserver

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  example_config.cfg
analysis/: Untitled.ipynb  Untitled1.ipynb  graph.gml
client/: client.py  gagaworker.py
client/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: config.hpp  helper.hpp  main.cpp  metaconfig.hpp  sqlitesave.hpp
